--- a/package.json
+++ b/package.json
@@ -10,24 +10,32 @@
     "typegen": "npx sanity@latest schema extract && npx sanity@latest typegen generate"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.10.6",
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@neondatabase/serverless": "^0.10.4",
     "@rexxars/react-json-inspector": "^9.0.1",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.67.1",
+    "@vercel/postgres": "^0.10.0",
+    "drizzle-orm": "^0.39.0",
+    "js-cookie": "^3.0.5",
     "next": "^15.0.4",
     "next-sanity": "^9.8.27",
-"react": "^18.0.0",
-"react-dom": "^18.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-hot-toast": "^2.5.1",
+    "react-toastify": "^11.0.3",
     "remixicon": "^4.6.0",
     "sanity": "^3.67.1",
     "styled-components": "^6.1.13",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
